--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,14 +3,22 @@
     <ion-title>
       Inbox
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="scrollMe()">
+        <ion-label>
+          Scroll to top
+        </ion-label>
+      </ion-button>
+      <ion-button (click)="onClick()">
+       <ion-label>
+         Click me
+       </ion-label>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
-    <ion-refresher-content></ion-refresher-content>
-  </ion-refresher>
-  
+<ion-content [fullscreen]="false">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">
@@ -18,7 +26,7 @@
       </ion-title>
     </ion-toolbar>
   </ion-header>
-  
+
   <ion-list>
     <app-message *ngFor="let message of getMessages()" [message]="message"></app-message>
   </ion-list>
